chore: replace 400 with 404 when user is not found